fixed blurry icon

--- a/src/assets/scss/_languageSwitch.scss
+++ b/src/assets/scss/_languageSwitch.scss
@@ -5,8 +5,8 @@
 	z-index: 1000;
 
 	svg {
-		width: 27px;
-		height: 27px;
+		width: 30px;
+		height: 30px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -47,9 +47,9 @@
 		z-index: 1000;
 		width: max-content;
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(27px, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
 		grid-auto-rows: min-content;
-		max-width: calc(3 * 27px + 2 * 4px + 2 * calc(var(--gap, 1.5rem) * 0.5) + 20px);
+		max-width: calc(3 * 30px + 2 * 4px + 2 * calc(var(--gap, 1.5rem) * 0.5) + 20px);
 		gap: 6px;
 
 		.yn-languageSwitch-link {
@@ -78,7 +78,7 @@
 		}
 
 		.yn-languageSwitch-flag {
-			width: 27px;
+			width: 30px;
 			height: 18px;
 			object-fit: cover;
 			object-position: center;
